Fixed clipping of tooltip

--- a/src/main/resources/files/assets/css/app.css
+++ b/src/main/resources/files/assets/css/app.css
@@ -39,7 +39,6 @@
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.02);
     background: transparent;
     border-radius: var(--radius);
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     transition: box-shadow 0.3s ease;
@@ -558,7 +557,7 @@
 
 [data-tooltip]:before {
     content: attr(data-tooltip);
-    position: absolute;
+    position: fixed;
     bottom: 100%;
     right: 0;
     transform: translateY(-10px);
@@ -571,12 +570,13 @@
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.2s;
-    z-index: 1000;
+    z-index: 9999;
 }
 
 [data-tooltip]:hover:before {
     opacity: 1;
     visibility: visible;
+    z-index: 9999;
 }
 
 .image-container {
